# rgbdGrabber

./: CMakeLists.txt  Makefile  README.md
include/rgbdGrabber/: openCVVisualizer.hpp  openni2Grabber.hpp  realSenseGrabber.hpp  rgbdGrabberHelpers.hpp
src/: openni2Grabber.cpp  openni2GrabberApp.cpp  openni2MultiGrabberApp.cpp  realSenseGrabber.cpp  rgbdGrabberHelpers.cpp
